--- a/FE/src/styles/theme.css
+++ b/FE/src/styles/theme.css
@@ -716,7 +716,10 @@ header.header {
 }
 
 .wc-button {
-    margin-top: 60px;
+    margin: 60px auto 0;
+    display: flex;
+    justify-content: center;
+    width: 100%;
 }
 
 .default-button {
@@ -747,8 +750,8 @@ header.header {
 }
 
 .wc-button a {
-    width: auto;
-    min-width: 200px;
+    width: 320px;
+    max-width: 100%;
 }
 
 /* Featured Properties */
@@ -1195,6 +1198,11 @@ header.header {
 .testi-link a {
     width: 290px;
     margin: auto;
+}
+.testi-link {
+    display: flex;
+    justify-content: center;
+    margin-top: 10px;
 }
 
 /* CTA */
