--- a/FE/src/pages/VideosPage.css
+++ b/FE/src/pages/VideosPage.css
@@ -82,7 +82,7 @@
 }
 
 .video-row-body h2 {
-  font-family: 'quincy-cf', 'Cormorant Garamond', 'Playfair Display', serif !important;
+  font-family: var(--font-family-title) !important;
   font-size: 40px !important;
   color: #c19280 !important;
   margin: 0;
