--- a/FE/src/components/TitleHeader.css
+++ b/FE/src/components/TitleHeader.css
@@ -32,7 +32,7 @@
 
 .title-header__bar {
   width: var(--border-width-thick);
-  height: 140px;
+  height: 110px;
   background: var(--color-primary-light);
   display: block;
   flex-shrink: 0;
@@ -65,6 +65,13 @@
   line-height: var(--line-height-tight);
 }
 
+.title-header__subtitle {
+  margin: 0;
+  font-size: var(--font-size-body);
+  color: var(--color-text-muted);
+  letter-spacing: 0.5px;
+}
+
 /* ===== Responsive Styles ===== */
 
 /* Tablet */
@@ -74,7 +81,7 @@
   }
 
   .title-header__bar {
-    height: 100px;
+    height: 90px;
   }
 
   .title-header__title {
@@ -93,7 +100,7 @@
   }
 
   .title-header__bar {
-    height: 80px;
+    height: 70px;
   }
 
   .title-header__title {
